update to ck_symbols
Change-Id: Id37abaea9333f4ebfcf512c3e2b4d312713206bc

--- a/core/res/res/values/ck_symbols.xml
+++ b/core/res/res/values/ck_symbols.xml
@@ -5,5 +5,8 @@
   <!-- Halo -->
   <java-symbol type="style" name="Theme.DeviceDefault.FloatingWindow" />
   <java-symbol type="style" name="Theme.DeviceDefault.FloatingWindowLight" />
+
+  <!-- BeanStalk platlogo -->
+  <java-symbol type="drawable" name="bs_platlogo" />
   
 </resources>
