add candy platlogo
Change-Id: I9c10fffc9f9ad6733f205a6517ae8a5ae4cbe7ba

--- a/core/res/res/values/ck_symbols.xml
+++ b/core/res/res/values/ck_symbols.xml
@@ -6,4 +6,7 @@
   <java-symbol type="style" name="Theme.DeviceDefault.FloatingWindow" />
   <java-symbol type="style" name="Theme.DeviceDefault.FloatingWindowLight" />
   
+  <!-- CandyKat platlogo -->
+  <java-symbol type="drawable" name="cm_platlogo" />
+
 </resources>
